fix spacings and font family of sections and headers

--- a/styl/contact.styl
+++ b/styl/contact.styl
@@ -9,8 +9,9 @@
     margin-bottom: spacing8x
 
   & h1
-    margin: spacing8x 0
+    margin: spacing12x 0
     line-height: lineHeight2
+    font-family: fontFamilyRockwell
     font-size: fontSize2
     color: colorPrimary
 
