--- a/styl/programs.styl
+++ b/styl/programs.styl
@@ -6,12 +6,13 @@
   margin: 0 auto
 
 #view-program-container .section
-  padding: spacing4x 0
+  padding: spacing8x 0 spacing4x
   margin-bottom: spacing8x
 
   & h2.section-title
     line-height: propUnit2x
     margin-bottom: spacing8x
+    font-family: fontFamilyRockwell
     font-size: fontSize2
     color: colorPrimary
     border-bottom: 1px solid colorGrayLight
